fix - Fixed the mobile first screens to be larger on small devices

--- a/frontend/src/pages/register/Register.css
+++ b/frontend/src/pages/register/Register.css
@@ -1,3 +1,17 @@
+.register {
+  height: 100vh;
+}
+
 .p-icon-field {
   width: 100%;
+}
+
+.container-register {
+  width: 75%;
+}
+
+@media screen and (max-width: 600px) {
+  .container-register {
+    width: 100%;
+  }
 }
